--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <section class="section">
                 <nav class="nav-list">
-                    <img src="imgas/logo.svg" class="logo" alt="Blanchard logo" >
+                    <img src="imgas/logo.svg" class="logo" alt="Blanchard logo">
                     <ul class="nav-item-list">
                         <li class="nav-list-item"><a href="#О нас">О нас</a></li>
                         <li class="nav-list-item"><a href="#Галерея">Галерея</a></li>    
@@ -19,13 +19,13 @@
                         <li class="nav-list-item"><a href="#Проекты">Проекты</a></li>
                         <li class="nav-list-item"><a href="#Контакты">Контакты</a></li>
                     </ul>
-                    <div  class="poisk-a">
-                        <a>
-                            <img src="imgas/poisk.png"  alt="poisk">
+                    <div class="poisk-a">
+                        <a href="#">
+                            <img src="imgas/poisk.png" alt="poisk">
                         </a>
                     </div>
                 </nav>
-            </section>
+            </section> 
         </header> 
         <section class="home-section">
             <div class="home-img">
@@ -41,6 +41,60 @@
                     </div>
                 </div>
               </div>
+        </section>
+        <section>
+            <h2 class="nas-title">О нас</h2>
+            <p class="nas-text">
+                Ясность нашей позиции очевидна: семантический разбор внешних противодействий однозначно определяет каждого участника 
+                как способного принимать собственные решения касаемо распределения внутренних резервов и ресурсов. Не следует, однако, забывать, что высококачественный прототип будущего проекта влечёт за собой процесс внедрения и модернизации модели развития. Повседневная практика показывает,
+                что высокое качество позиционных исследований создаёт необходимость включения в производственный план целого ряда внеочередных мероприятий с учётом комплекса распределения внутренних резервов и ресурсов.
+                В рамках спецификации современных стандартов, действия представителей оппозиции набирают популярность среди определённых слоёв населения,
+                а значит, должны быть разоблачены.
+            </p>
+        </section>
+        <!-- <section>
+          <h2>Галерея</h2>
+          <img src="imgas/birmingham-museums-trust-MK_98NuC4-4-unsplash 3 (1).svg" class="galeryia" alt="birmingham">
+            <ul class="galeryia-ul">
+                <li class="galeryia-li">XIX век</li>
+                <li class="galeryia-li">XX век</li>
+                <li class="galeryia-li">Современность</li>
+            </ul>
+            <ul class="galeryia-ul">
+                <li class="galeryia-li">
+                   <img src="imgas/heroglif.svg" class="heroglif"> 
+                </li>
+                <li class="galeryia-li">
+                    <img src="imgas/heroglif2.svg" class="heroglif">
+                </li>
+                <li class="galeryia-li">
+                    <img src="imgas/heroglif3.svg" class="heroglif">
+                </li>
+            </ul>
+        </section> -->
+        <section>
+          <h2>Галерея</h2>
+            <div class="galeryia">
+                <img src="imgas/birmingham-museums-trust-MK_98NuC4-4-unsplash 3 (1).svg" alt="birmingham">
+                <div class="galeryia-div">
+                <ul class="okey">
+                    <li class="galeryia-li">XIX век</li>
+                    <li class="galeryia-li">XX век</li>
+                    <li class="galeryia-li">Современность</li>
+                </ul>
+                <ul class="galeryia-ul">
+                    <li class="galeryia-li">
+                       <img src="imgas/heroglif.svg" class="heroglif">
+                    </li>
+                    <li class="galeryia-li">
+                        <img src="imgas/heroglif2.svg" class="heroglif">
+                    </li>
+                    <li class="galeryia-li">
+                        <img src="imgas/heroglif3.svg" class="heroglif">
+                        </li>
+                </ul>
+                </div>
+            </div>
         </section>
     </body>
 </html>
