--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </nav>
             </section> 
         </header> 
-        <section class="home-section">
+        <section  class="home-section">
             <div class="home-img">
                 <img src="imgas/home.svg" alt="amroc">
                 <div class="section-div">
@@ -42,7 +42,7 @@
                 </div>
               </div>
         </section>
-        <section>
+        <section id="О нас">
             <h2 class="nas-title">О нас</h2>
             <p class="nas-text">
                 Ясность нашей позиции очевидна: семантический разбор внешних противодействий однозначно определяет каждого участника 
@@ -52,27 +52,7 @@
                 а значит, должны быть разоблачены.
             </p>
         </section>
-        <!-- <section>
-          <h2>Галерея</h2>
-          <img src="imgas/birmingham-museums-trust-MK_98NuC4-4-unsplash 3 (1).svg" class="galeryia" alt="birmingham">
-            <ul class="galeryia-ul">
-                <li class="galeryia-li">XIX век</li>
-                <li class="galeryia-li">XX век</li>
-                <li class="galeryia-li">Современность</li>
-            </ul>
-            <ul class="galeryia-ul">
-                <li class="galeryia-li">
-                   <img src="imgas/heroglif.svg" class="heroglif"> 
-                </li>
-                <li class="galeryia-li">
-                    <img src="imgas/heroglif2.svg" class="heroglif">
-                </li>
-                <li class="galeryia-li">
-                    <img src="imgas/heroglif3.svg" class="heroglif">
-                </li>
-            </ul>
-        </section> -->
-        <section>
+        <section id="Галерея">
           <h2>Галерея</h2>
             <div class="galeryia">
                 <img src="imgas/birmingham-museums-trust-MK_98NuC4-4-unsplash 3 (1).svg" alt="birmingham">
@@ -95,6 +75,70 @@
                 </ul>
                 </div>
             </div>
+        </section>
+        <section id="Каталог">
+            <h2 class="nkar-h2 katalog">
+                Каталог
+            </h2>
+            <p class="nkar-text p">Акционеры крупнейших компаний, которые представляют собой яркий пример континентально-европейского типа политической культуры,
+               будут объявлены нарушающими общечеловеческие нормы этики и морали. Являясь всего лишь частью общей картины, стремящиеся вытеснить традиционное производство,
+               нанотехнологии и по сей день остаются уделом либералов, 
+               которые жаждут быть функционально разнесены на независимые элементы.</p>
+        </section>
+        <section>
+            <ul>
+                <li class="nkar-li">
+                    <div class="nkar-div">
+                        <img src="imgas/1.svg" class="nkar" alt="Доменико Гирландайо">
+                    </div>
+                    <div>
+                        <h2 class="nkar-h2">
+                            Доменико Гирландайо
+                        </h2>
+                        <p class="nkar-p">2 июня 1448–11 января 1494</p>
+                        <p class="nkar-text">
+                           Один из ведущих флорентийских художников Кватроченто, основатель художественной династии,
+                           которую продолжили его брат Давид и сын Ридольфо. Глава художественной мастерской, где юный Микеланджело в течение года овладевал профессиональными навыками.
+                           Автор фресковых циклов, в которых выпукло, со всевозможными подробностями показана домашняя жизнь библейских
+                           персонажей (в их роли выступают знатные граждане Флоренции в костюмах того времени).
+                        </p>
+                    </div>
+                </li>
+                <li class="nkar-li">
+                    <div class="nkar-div">
+                        <img src="imgas/2.svg" class="nkar" alt="Андреа дель Верроккьо">
+                    </div>
+                    <div>
+                        <h2 class="nkar-h2">
+                           Андреа дель Верроккьо
+                        </h2>
+                        <p class="nkar-p">1435–10 октября 1488</p>
+                        <p class="nkar-text"> 
+                           Творческий путь молодого Андреа, как и многих знаменитых художников и скульпторов эпохи Возрождения, 
+                           начался с обучения и работы в одной из ювелирных мастерских Флоренции. Там он занимался не только изготовлением драгоценных украшений,
+                           но и познавал основы живописи, пластики и архитектуры. Его первым учителем был Джулиано Веррокки,
+                           фамилию которого в несколько изменённом виде Андреа заимствовал для своего будущего псевдонима.
+                        </p>
+                        </div>
+                </li>
+                <li class="nkar-li">
+                    <div class="nkar-div">
+                        <img src="imgas/3.svg" class="nkar" alt="Лоренцо ди Креди">
+                    </div>
+                    <div>
+                        <h2 class="nkar-h2">
+                           Лоренцо ди Креди
+                        </h2>
+                        <p class="nkar-p">1459–12 января 1537</p>
+                        <p class="nkar-text">
+                           Один из ведущих флорентийских художников Кватроченто, основатель художественной династии,
+                           которую продолжили его брат Давид и сын Ридольфо. Глава художественной мастерской, где юный Микеланджело в течение года овладевал
+                           профессиональными навыками. Автор фресковых циклов, в которых выпукло, со всевозможными подробностями показана домашняя жизнь библейских персонажей 
+                           (в их роли выступают знатные граждане Флоренции в костюмах того времени).
+                        </p>
+                    </div>
+                </li>
+            </ul>
         </section>
     </body>
 </html>
