--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         намеченных плановых заданий создаёт предпосылки для новых предложений
                     </p>
                     <div class="home-link">
-                        <a href="#">Подписаться на рассылку</a>
+                        <a class="home-a" href="#">Подписаться на рассылку</a>
                     </div>
                 </div>
               </div>
@@ -80,10 +80,12 @@
             <h2 class="nkar-h2 katalog">
                 Каталог
             </h2>
-            <p class="nkar-text p">Акционеры крупнейших компаний, которые представляют собой яркий пример континентально-европейского типа политической культуры,
+            <p class="nkar-text p">
+               Акционеры крупнейших компаний, которые представляют собой яркий пример континентально-европейского типа политической культуры,
                будут объявлены нарушающими общечеловеческие нормы этики и морали. Являясь всего лишь частью общей картины, стремящиеся вытеснить традиционное производство,
                нанотехнологии и по сей день остаются уделом либералов, 
-               которые жаждут быть функционально разнесены на независимые элементы.</p>
+               которые жаждут быть функционально разнесены на независимые элементы.
+            </p>
         </section>
         <section>
             <ul>
@@ -138,6 +140,76 @@
                         </p>
                     </div>
                 </li>
+            </ul>
+        </section>
+        <section>
+              <h2 class="sabitia-h2">
+                События
+              </h2>
+              <ul class="sabitia-list">
+                <li class="sabitia-item">
+                    <img src="imgas/4.svg" alt="Книжная">
+                    <div class="sabitia-div">
+                        <p class="sabitia-p"> 
+                            Музей им. Щусева с 20 марта по 30 апреля
+                        </p>
+                        <p class="sabitia-p-p">Книжная гравюра в живом восприятии</p>
+                        <p class="sabitia-text">
+                            Один из ведущих флорентийских художников Кватроченто, основатель художественной династии,
+                            которую продолжили его брат Давид и сын Ридольфо
+                        </p>
+                        <a class="sabitia-a">Подробнее</a>
+                    </div>
+                </li>
+                <li class="sabitia-item">
+                    <img src="imgas/5.svg" alt="Открытая">
+                    <div class="sabitia-div">
+                        <p class="sabitia-p">ММОМА</p>
+                        <p class="sabitia-p">24 марта 19:00</p>
+                        <p class="sabitia-p-p">
+                            «Открытая дискуссия». Дмитрий Петров и Сергей Ильин.
+                        </p>
+                        <p class="sabitia-text">
+                            Высокий уровень вовлечения представителей целевой аудитории является
+                            чётким доказательством простого факта
+                        </p>
+                        <a class="sabitia-a">Подробнее</a>
+                    </div>
+                </li>
+                <li class="sabitia-item">
+                   <img src="imgas/6.svg" alt="Подробнее">
+                    <div class="sabitia-div">
+                        <p class="sabitia-p">Еврейский музейс 31 марта по 21 апреля</p>
+                        <p class="sabitia-p-p">Выставка «Формация 2020»</p>
+                        <p class="sabitia-text">
+                           Идейные соображения высшего порядка, а также современная методология разработки играет важную роль 
+                           в формировании глубокомысленных рассуждений
+                        </p>
+                        <a class="sabitia-a">Подробнее</a>
+                    </div>
+                </li>
+              </ul>
+        </section>
+        <section>
+            <h2 class="proekti-h2">
+                Проекты
+            </h2>
+            <ul>
+            <li>
+                <p class="proekti-text">
+                   Предварительные выводы: постоянное информационно-пропагандистское
+                   обеспечение нашей деятельности однозначно фиксирует необходимость своевременного выполнения сверхзадачи. 
+                   А ещё независимые государства смешаны с не уникальными данными до степени совершённой неузнаваемости, из-за чего возрастает их статус бесполезности. Прежде всего, постоянное информационно-пропагандистское обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности принимаемых решений. И нет сомнений, что действия представителей оппозиции могут быть рассмотрены исключительно в разрезе маркетинговых и финансовых предпосылок. Банальные, но неопровержимые выводы, а также представители современных социальных резервов призывают нас к новым свершениям, 
+                   которые, в свою очередь, должны быть смешаны с не уникальными данными до степени совершённой неузнаваемости.
+                </p>
+             </li>
+             <p class="proekti-p">
+                Партнёры проектов:
+             </p>
+             <li class="proekti-li">
+               <img class="proekti-img" src="imgas/7.svg" alt="Frelands">
+               <img src="imgas/8.svg" alt="Institute"> 
+             </li>
             </ul>
         </section>
     </body>
